# uva-supplier-insights

./: .gitignore  README.md  commands.txt  pyproject.toml  requirements.txt
src/supplypy/: cli.py
src/supplypy/deploy/: deploy_tabpy_services.py
src/supplypy/service/: modeling.py  preprocessing.py  similarity_service.py
